--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "jest": "^19.0.2",
     "nwb": "0.15.x",
     "react-test-renderer": "^15.4.2",
-    "regenerator-runtime": "^0.10.3"
+    "regenerator-runtime": "^0.10.3",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   },
   "dependencies": {
     "jest-css-modules": "^1.1.0",
     "lodash": "^4.17.4",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
     "react-measure": "^1.4.6",
     "react-scripts": "0.6.1"
+  },
+  "peerDependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   },
   "scripts": {
     "start": "nwb serve-react-demo",
